feat(core): implement smart popover positioning and scroll-to-view for tour elements
  Add intelligent popover positioning system and automatic scrolling to ensure
  tour elements are always visible and properly positioned on screen.

  Core improvements:
  - Smart positioning: Automatically adjusts popover position when there's
    insufficient space in the preferred direction
  - Scroll-to-view: Automatically scrolls elements into view when tour steps change
  - Measurement retry: Implements delayed measurement with retry logic to handle
    elements that need time to render or scroll into position
  - Context-aware animations: Entry animations match the actual calculated position

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,11 +11,17 @@
   "author": " <> ()",
   "license": "UNLICENSED",
   "homepage": "#readme",
+  "peerDependencies": {
+    "react": "*",
+    "react-native": "*",
+    "react-native-reanimated": ">=3.0.0"
+  },
   "devDependencies": {
     "@react-native/babel-preset": "0.81.1",
     "@types/react": "^19.1.0",
     "react": "19.1.0",
-    "react-native": "0.81.1"
+    "react-native": "0.81.1",
+    "react-native-reanimated": "^3.16.4"
   },
   "create-react-native-library": {
     "languages": "kotlin-objc",
