--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -14,6 +14,7 @@
     "@sherpa/core": "file:../../packages/core",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-reanimated": "^3.16.4",
     "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
