--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.81.4",
-    "@sherpa/core": "file:../../packages/core",
+    "rn-sherpa": "file:../../packages/core",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-reanimated": "^3.16.4",
