ci: add GitHub Actions workflows and configure build system                                                                                   │ │                                                                                                                                                                │ │   Setup automated CI/CD pipeline and TypeScript build configuration:                                                                                           │ │   - Add CI workflow for linting, type checking, and builds                                                                                                     │ │   - Add changeset workflow for automated version management                                                                                                    │ │   - Add release workflow for NPM publishing with GitHub releases                                                                                               │ │   - Configure TypeScript build to generate declaration files                                                                                                   │ │   - Update turbo configuration for proper build orchestration                                                                                                  │ │   - Improve package.json with build scripts and file inclusions

--- a/packages/core/.npmignore
+++ b/packages/core/.npmignore
@@ -27,12 +27,10 @@ __mocks__/
 dist/
 build/
 *.tsbuildinfo
+tsconfig.tsbuildinfo
 
 # Example app
 example/
-android/
-ios/
-*.podspec
 
 # Git
 .git/
