chore: add changesets for automated version management
Setup Changesets to handle versioning and releases:
- Configure changesets with monorepo support and public access
- Add version management scripts for stable and beta releases
- Create beta release workflow for pre-release testing
- Add comprehensive release workflow documentation
- Include example changeset for build system setup

--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo check-types"
+    "check-types": "turbo check-types",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+    "version-packages:beta": "changeset version --snapshot beta",
+    "release": "turbo build --filter=rn-sherpa && changeset publish",
+    "release:beta": "turbo build --filter=rn-sherpa && changeset publish --tag beta"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
