--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -56,6 +56,7 @@
     "react-native-reanimated": ">=3.0.0"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.29.7",
     "@react-native/babel-preset": "0.81.1",
     "@types/react": "^19.1.0",
     "react": "19.1.0",
