--- a/.github/workflows/release-beta.yml
+++ b/.github/workflows/release-beta.yml
@@ -36,11 +36,11 @@ jobs:
       - name: Version packages (beta)
         run: yarn changeset version
 
-      - name: Publish to npm with beta tag
+      - name: Publish to npm
         id: changesets
         uses: changesets/action@v1
         with:
-          publish: yarn changeset publish --tag beta
+          publish: yarn changeset publish
           createGithubReleases: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
